# fastune

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: python-package.yml  rust.yml
benchmark/: analyze_results.py  benchmark_no_ft.py  benchmark_no_ft_corrupted.py  benchmark_no_ft_fixed.py  hyperopt_benchmark.py  optuna_benchmark.py  requirements.txt  sklearn_benchmark.py  test_benchmark.py
data/: download_data.py
docs/: improvements.md  tasks.md
examples/: benchmark.py
fastune/: pbt_search.py
src/: random_search.rs
tests/: test_pbt_search.py
