[project]
name = "fastune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "bayesian-optimization>=2.0.4",
    "hyperopt>=0.2.7",
    "optuna>=4.3.0",
    "ray[tune]>=2.46.0",
    "scikit-learn>=1.6.1",
    "setuptools>=80.9.0",
]
